--- a/Yogatastic/Yogatastic/templates/index.html
+++ b/Yogatastic/Yogatastic/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoga Routine</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon-32x32.png') }}" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="{{ url_for('static', filename='content/site.css') }}">
     <script src="{{ url_for('static', filename='scripts/scripts.js') }}" defer></script>
 </head>
@@ -21,7 +22,9 @@
         <option value="workout3">Workout 3</option>
         <option value="workout4">Workout 4</option>
         <option value="workout5">Workout 5</option>
-        <!-- Add more workouts as needed -->
+        <option value="workout6">Workout 6</option>
+        <option value="workout7">Workout 7</option>
+        <!-- Add more workouts as needed and update scripts.js -->
     </select>
     <button id="start-button">Start</button>
 </body>
