Pose displayed with title of image.

--- a/Yogatastic/Yogatastic/templates/index.html
+++ b/Yogatastic/Yogatastic/templates/index.html
@@ -9,7 +9,7 @@
     <script src="{{ url_for('static', filename='scripts/scripts.js') }}" defer></script>
 </head>
 <body>
-    <h1>Yoga Routine</h1>
+    <h1 id="pose-title">Yoga Routine</h1>
     <div class="yoga-container">
         <img id="yoga-image" src="{{ url_for('static', filename='img/childs_pose.jpg') }}" alt="Child's Pose" />
         <div class="timer">
